--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,28 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-<!--
-        <SearchView
-            android:id="@+id/searchSong"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="8dp"
-            android:iconifiedByDefault="false"
-            android:queryHint="Search For Music or Users:" />
-
-        <Spinner
-            android:id="@+id/searchDropDown"
-            android:layout_width="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="8dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_toEndOf="@+id/searchSong"></Spinner>
-            -->
         <com.mancj.materialsearchbar.MaterialSearchBar
             android:id="@+id/searchBar"
             style="@style/MaterialSearchBarLight"
@@ -39,7 +17,7 @@
             app:mt_maxSuggestionsCount="10"
             app:mt_searchBarColor="#FAFAFA"
             app:mt_speechMode="false" />
-    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/recommendedUsersTitle"
@@ -49,16 +27,15 @@
         android:layout_marginTop="24dp"
         android:text="Recommended Users:"
         android:textSize="16dp"></TextView>
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+
     <ProgressBar
         android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
-        android:indeterminate="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="visible" />
 
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedUsersList"
@@ -66,6 +43,4 @@
            android:layout_height="match_parent"
            android:layout_below="@id/progressbar"
            android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
-
-   </RelativeLayout>
 </LinearLayout>
