--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relativeLayou"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:id="@+id/frameContainer"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_above="@id/bottom_navigation"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation" />
 
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            app:itemIconTint="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:itemIconSize="40dp"
-            app:menu="@menu/menu_bottom_navigation"
-            android:background="@color/colorAccent"
-            app:itemBackground="@color/colorAccent"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorAccent"
+        app:itemBackground="@color/colorAccent"
+        app:itemIconSize="40dp"
+        app:itemIconTint="@color/colorPrimary"
+        app:menu="@menu/menu_bottom_navigation" />
 
 
 </RelativeLayout>
