--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -21,8 +21,9 @@
             android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/profilePicture"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="-26dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="-29dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/round_shape_button"
             android:text="Take Profile Picture"
@@ -51,6 +52,20 @@
             android:scaleType="centerInside"
             android:visibility="invisible"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <Button
+            android:id="@+id/galleryButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profilePicture"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="-29dp"
+            android:layout_toEndOf="@+id/takePictureButton"
+            android:background="@drawable/round_shape_button"
+            android:text="Load From Gallery"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18dp" />
 
 
     </RelativeLayout>
