--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/profilePicture"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="-29dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/round_shape_button"
@@ -58,14 +58,13 @@
             android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/profilePicture"
-            android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="-29dp"
             android:layout_toEndOf="@+id/takePictureButton"
             android:background="@drawable/round_shape_button"
             android:text="Load From Gallery"
             android:textColor="@color/colorPrimary"
-            android:textSize="18dp" />
+            android:textSize="14sp" />
 
 
     </RelativeLayout>
