Added recommended songs tab to replace share post tab

--- a/app/src/main/res/layout/fragment_main_feed.xml
+++ b/app/src/main/res/layout/fragment_main_feed.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/mainFeedTitle"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
+        android:background="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:text="JamOut"
+        android:paddingVertical="8dp"
+        android:textSize="28dp"></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mainFeed"
+        android:layout_below="@id/mainFeedTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp" />
-</RelativeLayout>
+</LinearLayout>
