--- a/app/src/main/res/layout/fragment_share_song.xml
+++ b/app/src/main/res/layout/fragment_share_song.xml
@@ -7,48 +7,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<SearchView
-android:id="@+id/searchSong"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_alignParentTop="true"
-android:layout_gravity="center"
-android:layout_marginTop="16dp"
-android:iconifiedByDefault="false"
-android:queryHint="Search For Music to Share" />
+    <TextView
+        android:layout_width="match_parent"
+        android:text="Recommended Songs"
+        android:textSize="28dp"
+        android:paddingVertical="8dp"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content">
 
-<RelativeLayout
-android:layout_width="match_parent"
-android:layout_height="400dp">
+    </TextView>
 
+    <ProgressBar
+        android:id="@+id/suggestSongProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ></ProgressBar>
 
-<ImageView
-    android:id="@+id/postImage"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:layout_marginStart="28dp"
-    android:layout_marginTop="125dp"
-    tools:srcCompat="@tools:sample/avatars" />
-</RelativeLayout>
-
-<EditText
-android:id="@+id/postDescription"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_gravity="center"
-android:hint="Add Comment to Post:"></EditText>
-
-<Button
-android:id="@+id/shareSongButton"
-android:layout_width="150dp"
-android:layout_height="wrap_content"
-android:background="@color/colorPrimaryDark"
-android:textColor="@color/colorPrimary"
-android:layout_gravity="center"
-android:layout_marginTop="8dp"
-android:text="Share Post" />
-
-
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recommendedSongsList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
