--- a/app/src/main/res/layout/post_model.xml
+++ b/app/src/main/res/layout/post_model.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/border"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
    <RelativeLayout
        android:layout_width="wrap_content"
-       android:layout_marginTop="16dp"
+       android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_height="40dp">
 
@@ -39,40 +38,42 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="#eeeeee">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
             android:id="@+id/imageLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/postImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
-        <ImageView
-            android:id="@+id/playIcon"
-            android:layout_centerInParent="true"
-            android:alpha=".6"
-            android:layout_width="40dp"
-            android:src="@drawable/ic_baseline_play_arrow_24"
-            android:visibility="gone"
-            android:layout_height="40dp" />
+            android:layout_marginBottom="8dp">
+
+            <ImageView
+                android:id="@+id/postImage"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
+
+            <ImageView
+                android:id="@+id/playIcon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:alpha=".6"
+                android:src="@drawable/ic_baseline_play_arrow_24"
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/pauseIcon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_centerInParent="true"
                 android:alpha=".6"
                 android:src="@drawable/ic_baseline_pause_24"
-                android:layout_width="40dp"
-                android:visibility="gone"
-                android:layout_height="40dp" />
+                android:visibility="gone" />
         </RelativeLayout>
 
         <TextView
@@ -118,6 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Caption"
+        android:layout_marginBottom="8dp"
         android:textSize="16dp">
 
     </TextView>
