--- a/app/src/main/res/layout/fragment_share_results_dialog.xml
+++ b/app/src/main/res/layout/fragment_share_results_dialog.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/round_shape_button"
         android:text="Share Post"
         android:textColor="@color/colorPrimary" />
 
