--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -43,10 +43,12 @@
 
     <Button
         android:id="@+id/favoriteButton"
+        android:background="@drawable/round_shape_button"
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@+id/artistTitle"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/colorPrimary"
         android:layout_marginStart="44dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="43dp"
@@ -56,7 +58,9 @@
     <Button
         android:id="@+id/shareSongButton"
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:background="@drawable/round_shape_button"
+        android:textColor="@color/colorPrimary"
+        android:layout_height="40dp"
         android:layout_below="@+id/favoriteButton"
         android:layout_alignStart="@+id/favoriteButton"
         android:layout_alignEnd="@+id/favoriteButton"
